@@ -1,5 +1,10 @@
 2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* ieee754r/islessgreaterd32.c (islessgreater): clean ups implementation
+	to use only libdecnumber operations.
+
+2014-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* libdecnumber/bid/bid-coeffbits.h (bid_required_bits_32: Fix lookup
 	table values.
 	(bid_required_bits_64): Use bid_required_bits_32 instead.
